# ros2-arm-web-controller

./: .gitignore  README.md
src/arm-planner/: CMakeLists.txt  package.xml  setup.py
src/arm-planner/arm_planner/: ros_bridge.py
src/arm-planner/launch/: command_position.launch.py  web_server.launch.py
src/arm-planner/meshes/: Link_1_1.stl  Link_2_1.stl  Link_3_1.stl  Link_5_1.stl  URDF.gazebo  base_link.stl  robot.xacro
src/arm-planner/meshes/meshes_backups/: Link_0_1.stl  Link_4_1.stl
src/arm-planner/src/: command_position.py
src/arm-planner/urdf/: your_robot.urdf
src/arm-planner/web/client/: index.html  package-lock.json  package.json
src/arm-planner/web/client/src/: App.jsx
src/arm-planner/web/server/: index.js  package-lock.json  package.json
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: URDF.ros2_control.xacro  URDF.srdf  URDF.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz
src/arm_moveit_config/launch/: demo.launch.py  local.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/panda-arm/: .setup_assistant  CMakeLists.txt  package.xml
src/panda-arm/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  panda_arm_hand.srdf.xacro  ros2_controllers.yaml
src/panda-arm/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/panda_gz_sim/: CMakeLists.txt  package.xml  store_points_panel_plugin.xml
src/panda_gz_sim/config/: camera_bridge.yaml  initial_positions.yaml  moveit_controllers.yaml  panda_gz.srdf  ros2_controllers.yaml  sensors_3d.yaml
src/panda_gz_sim/launch/: gazebo.launch.py  map.launch.py
src/panda_gz_sim/scripts/: floor_image_projector.py  map_points.cpp
src/panda_gz_sim/src/: store_points_panel.cpp  store_points_panel.hpp
src/panda_gz_sim/urdf/: panda_gz.urdf.xacro
src/panda_gz_sim/worlds/: empty_with_ground.sdf
